@@ -3,7 +3,7 @@
  * XODTEMPLATE.C - Template-based object configuration data input routines
  *
  * Copyright (c) 2001-2005 Ethan Galstad (nagios@nagios.org)
- * Last Modified: 03-10-2005
+ * Last Modified: 03-11-2005
  *
  * Description:
  *
@@ -7852,6 +7852,12 @@ int xodtemplate_register_host(xodtemplate_host *this_host){
 	/* bail out if we shouldn't register this object */
 	if(this_host->register_object==FALSE)
 		return OK;
+
+	/* if host has no alias or address, use host name - added 3/11/05 */
+	if(this_host->alias==NULL && this_host->host_name!=NULL)
+		this_host->alias=strdup(this_host->host_name);
+	if(this_host->address==NULL && this_host->host_name!=NULL)
+		this_host->address=strdup(this_host->host_name);
 
 	/* add the host definition */
 	new_host=add_host(this_host->host_name,this_host->alias,(this_host->address==NULL)?this_host->host_name:this_host->address,this_host->check_period,this_host->check_interval,this_host->max_check_attempts,this_host->notify_on_recovery,this_host->notify_on_down,this_host->notify_on_unreachable,this_host->notify_on_flapping,this_host->notification_interval,this_host->notification_period,this_host->notifications_enabled,this_host->check_command,this_host->active_checks_enabled,this_host->passive_checks_enabled,this_host->event_handler,this_host->event_handler_enabled,this_host->flap_detection_enabled,this_host->low_flap_threshold,this_host->high_flap_threshold,this_host->stalk_on_up,this_host->stalk_on_down,this_host->stalk_on_unreachable,this_host->process_perf_data,this_host->failure_prediction_enabled,this_host->failure_prediction_options,this_host->check_freshness,this_host->freshness_threshold,this_host->retain_status_information,this_host->retain_nonstatus_information,this_host->obsess_over_host);
